name:                hasbolt
version:             0.1.7.0
synopsis:            Haskell driver for Neo4j 3+ (BOLT protocol)
description:
  Haskell driver for Neo4j 3+ (BOLT protocol).
  .
  The package covers:
  .
    -Data serialization and deserialization
  .
    -Nodes, relationships and paths support
  .
    -Cypher queries and responses
  .
    -Transactions and error handling
  .
    -Authentification
  .
    -TLS/SSL connection
  .
    -Bolt protocol version 3 initial support
  .
  The code was tested with neo4j versions 3.0 — 3.5 and GrapheneDB service


homepage:            https://github.com/zmactep/hasbolt#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev, Martin Heuschober
maintainer:          pavel@yakovlev.me
copyright:           (c) 2018 Pavel Yakovlev
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.5
   || ==9.6.2

library
  hs-source-dirs:      src
  exposed-modules:     Database.Bolt
                     , Database.Bolt.Lazy
                     , Database.Bolt.Lens
                     , Database.Bolt.Serialization
  other-modules:       Database.Bolt.Value.Type
                     , Database.Bolt.Value.Helpers
                     , Database.Bolt.Value.Instances
                     , Database.Bolt.Connection.Connection
                     , Database.Bolt.Connection.Type
                     , Database.Bolt.Connection.Instances
                     , Database.Bolt.Connection.Pipe
                     , Database.Bolt.Connection
                     , Database.Bolt.Record
                     , Database.Bolt.Transaction
  build-depends:       base
                     , bytestring
                     , text
                     , containers
                     , binary
                     , data-binary-ieee754
                     , mtl
                     , network
                     , crypton-connection
                     , data-default
                     , deepseq
  default-language:    GHC2021
  ghc-options:
    -Weverything
    -Wno-deprecations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe
    -Wno-missing-export-lists
    -Wno-orphans
    -Wno-unused-imports
    -Wno-name-shadowing
    -Werror=identities
    -Werror=missing-methods
    -Werror=incomplete-record-updates
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=ambiguous-fields
    -Werror=incomplete-uni-patterns
    -Werror=redundant-constraints
    -Wno-missing-kind-signatures
    -Wno-missing-deriving-strategies

    -- Enable again for performance analysis
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations

    -- add back later
    -Wno-unticked-promoted-constructors

-- test-suite transaction
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             TransactionSpec.hs
--   build-depends:       base >= 4.8 && < 5
--                      , hasbolt
--                      , hspec >= 2.4.1 && < 2.9
--                      , QuickCheck >= 2.9 && < 2.14
--                      , data-default
--                      , text
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    GHC2021

test-suite hasbolt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Hex
  build-depends:       base
                     , hasbolt
                     , hspec
                     , QuickCheck
                     , text
                     , containers
                     , binary
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    GHC2021

benchmark hasbolt-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , base64-bytestring
                     , binary
                     , bytestring
                     , criterion
                     , data-default
                     , hasbolt
                     , hspec
  ghc-options:         -threaded -rtsopts -eventlog
  default-language:    GHC2021

source-repository head
  type:     git
  location: https://github.com/zmactep/hasbolt
